--- a/src/main/resources/templates/right.html
+++ b/src/main/resources/templates/right.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/right.css">
 
-<img class="ad" src="img/margherita.jpg" width="90px" height="90px">
-<img class="ad"src="img/ragupasta.jpg" width="90px" height="90px">
-<img class="ad"src="img/carprese.jpg" width="90px" height="90px">
-<img class="ad"src="img/wine.jpg" width="90px" height="90px">
+<img class="ad" src="img/margherita.jpg" alt="Margherita Pizza" width="90px" height="90px">
+<img class="ad"src="img/ragupasta.jpg" alt="Ragu Pasta" width="90px" height="90px">
+<img class="ad"src="img/carprese.jpg" alt="Carprese Salad" width="90px" height="90px">
+<img class="ad"src="img/wine.jpg" alt="Wine" width="90px" height="90px">
