--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,72 +1,148 @@
 @charset "EUC-KR";
-
 @import url('https://fonts.googleapis.com/css2?family=BioRhyme:wght@400;800&family=Crimson+Pro:wght@200&family=Oooh+Baby&family=Petit+Formal+Script&family=Quicksand:wght@300;500&display=swap');
+@import "https://code.highcharts.com/css/highcharts.css";
+
+.info{
+	width:300px;
+	margin:6px 15px;
+	padding:15px 15px 15px 15px;
+	background:white;
+}
+
+.info > h3{
+	display:block;
+	color:firebrick;
+	background:white;
+	font-family:'Biorhyme', serif;
+	font-weight:400;
+	text-align:center;
+}
+
+.info > ul{
+	list-style:disc;
+	padding:5px 10px;
+	background:white;
+}
+
+.info > ul > li{
+	background:white;
+	font-family:'Quicksand', sans-serif;
+	font-size:0.9em;
+	font-weight:500;
+	margin: 10px 0px;
+}
+
+.info > ul > li > #dinetype{
+	color:#04301C;
+	background:white;
+	font-weight:800;
+	font-size:1em;
+}
+
+#award{
+	border-collapse:collapse;
+	width:300px;
+	height:130px;
+	background:white;
+	margin: 10px 10px;
+}
+
+#award > thead > tr > th{
+	background:white;
+	display:none;
+}
+
+#award > tbody > tr > td{
+	background:white;
+}
+
+#award > tbody > tr > td:nth-child(1){
+	font-family:'Quicksand', sans-serif;
+	font-size:0.9em;
+	font-weight:600;
+	text-align:right;
+}
+
+#award > tbody > tr > td:nth-child(2){
+	font-family:'Crimson Pro', serif;
+	font-style:italic;
+}
 
 
-	
-	.info{
-		width:320px;
-		margin:6px 15px;
-		padding:15px 15px 15px 15px;
-		background:white;
-	}
-	
-	.info > h3{
-		display:block;
-		color:firebrick;
-		background:white;
-		font-family:'Biorhyme', serif;
-		font-weight:400;
-		text-align:center;
-	}
-	
-	.info > ul{
-		list-style:disc;
-		padding:5px 10px;
-		background:white;
-	}
-	
-	.info > ul > li{
-		background:white;
-		font-family:'Quicksand', sans-serif;
-		font-size:0.9em;
-		font-weight:500;
-		margin: 10px 0px;
-	}
-	
-	.info > ul > li > #dinetype{
-		color:#04301C;
-		background:white;
-		font-weight:800;
-		font-size:1em;
-	}
-	
-	#award{
-		border-collapse:collapse;
-		width:300px;
-		height:130px;
-		background:white;
-		margin: 10px 10px;
-	}
-	
-	#award > thead > tr > th{
-		background:white;
-		display:none;
-	}
-	
-	#award > tbody > tr > td{
-		background:white;
-	}
-	
-	#award > tbody > tr > td:nth-child(1){
-		font-family:'Quicksand', sans-serif;
-		font-size:0.9em;
-		font-weight:600;
-		text-align:right;
-	}
-	
-	#award > tbody > tr > td:nth-child(2){
-	
-		font-family:'Crimson Pro', serif;
-		font-style:italic;
-	}
+#container{
+	width:300px;
+	background:white;
+}
+
+#getdata{
+	color:black;
+	border:none;
+	text-decoration:underline;
+	font-family:'Crimson Pro', serif;
+	font-size:1.1em;
+	margin:5px auto;
+	display:block;
+}
+
+#getdata:hover{
+	color:firebrick;
+}
+
+.highcharts-figure *{
+	background:white;
+	  
+}
+.highcharts-pie-series .highcharts-point {
+    stroke: #ede;
+    stroke-width: 2px;
+}
+
+.highcharts-pie-series .highcharts-data-label-connector {
+    stroke: silver;
+    stroke-dasharray: 2, 2;
+    stroke-width: 2px;
+}
+
+.highcharts-figure,
+.highcharts-data-table table {
+    min-width: 300px;
+    max-width: 600px;
+    margin: 1em auto;
+    background:white;
+}
+
+.highcharts-data-table table {
+    font-family:'Quicksand', sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #ebebeb;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts-data-table td,
+.highcharts-data-table th,
+.highcharts-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts-data-table thead tr,
+.highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
