--- a/src/main/resources/templates/reserve/reserve.html
+++ b/src/main/resources/templates/reserve/reserve.html
@@ -5,62 +5,127 @@
 
 <script>
 
-	function rsvalidation(){
-		var formObj = document.getElementById('form_reserve');
-		if(!formObj.checkValidity()){
-			alert('error!');
-			return;
-		};
-	};
-
-	$(function(){
-		
-		const strpsize = document.querySelector('input[name=psize]');
-		const psize = strpsize.valueAsNumber;
-		
-		
-		$('#bt_reserve').click(function(){
-			
-			/*
-			for (var i = 0; i < form.elements.length; i++) {
-				if(form.elements[i].value == '' && form.elements[i].hasAttribute('required')){
-					alert('There are some required fields!');
-					return;
-				}
-			};*/
-			
-			/*
-			for (const el of document.getElementById('form_reserve').querySelectorAll("[required]")) {
-				  if (!el.reportValidity()) {
-				    return;
-				  }
-				}
-			*/
-			
-			/*return*/ rsvalidation();
-			
+	function rssubmit(){
 		$('#form_reserve').attr({
 			'action':'reserveimpl',
 			'method':'get'
 		});
 		
 		$('#form_reserve').submit();
+	};
+	
+	function rsvalidation(){
+		var formObj = document.getElementById('form_reserve');
+		if(!formObj.checkValidity()){
+			return;
+		} else{
+			rssubmit();
+		}
+	};
+	
+	function checkdate(){
+		var today = new Date();
+		var dd = today.getDate();
+		var mm = today.getMonth() + 1; //January is 0!
+		var yyyy = today.getFullYear();
+
+		if (dd < 10) {
+		   dd = '0' + dd;
+		};
+
+		if (mm < 10) {
+		   mm = '0' + mm;
+		};
+		    
+		today = yyyy + '-' + mm + '-' + dd;
+		document.getElementById('datepick').setAttribute("min", today);
+	};
+	
+	function checkpsize(){
+		
+		var strpsize = document.getElementById('psizepick').value;
+		var psize = strpsize.valueAsNumber;
+
+		
+		/*
+		if(strpsize == "Larger Party"){
+			var psize = 100;
+		}else{
+			var psize = strpsize.valueAsNumber;
+		};
+		
+		try{
+			var psize = strpsize.valueAsNumber;
+		}catch(exception_var){
+			var psize = 100;
+		}finally{
+			return psize;
+		}*/
+	}
+	
+	function checkname(){
+		var name = document.getElementById('namepick').value;
+		if(name.length < 2){
+			document.getElementById('nameguide').innerHTML="Please enter at least two characters"
+		}else{
+			document.getElementById('nameguide').innerHTML="";
+		}
+	};
+
+	$(function(){
+		
+		checkdate();
+		
+		$('input[name="name"]').keyup(function(){
+			checkname();
+		});
+		
+		$('#bt_reserve').click(function(){
+			checkpsize();
+			rsvalidation();
 		});
 	});
 
+	
+	
 </script>
 </head>
 <h3>Find a table</h3>
 <form id="form_reserve">
 	<fieldset>
 		<legend>Complete your reservation</legend>
-		Date<input type="date" name="date" class="rinfo" required><br>
-		Time<input type="time" name="time" class="rinfo" required><br>
-		Party Size<input type="number" name="psize" class="rinfo" required><br>
-		Name<input type="text" name="name" class="rinfo" required><br>
+		<p>All fields marked with * are required</p>
+		Date *<input type="date" name="date" id="datepick" class="rinfo" required>
+		Time *<input type="time" name="time" class="rinfo" min="10:00" max="21:00" required>
+		Party Size *<select class="rinfo" name="psize" id="psizepick">
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			<option>6</option>
+			<option>7</option>
+			<option>8</option>
+			<option value="100">Larger Party</option>
+		</select>
+		Name *<input type="text" name="name" id="namepick" class="rinfo" required><span id="nameguide"></span>
 		Special Requests<br>
 		<textarea name="request" class="rinfo"></textarea>
 	</fieldset>
 <button id="bt_reserve" type="submit">Complete Reservation</button>
 </form>
+<div class="notice">
+	<details class="terms" id="tandc">
+		<summary>Terms and Conditions</summary>
+		<p>
+		BY USING THE SERVICES, YOU ACKNOWLEDGE THAT YOU HAVE READ, UNDERSTAND AND AGREE TO BE BOUND AND COMPLY WITH THESE TERMS AND CONDITIONS AND OUR PRIVACY NOTICE. IF YOU DO NOT AGREE TO THESE TERMS AND CONDITIONS OR THE PRIVACY NOTICE, YOU MUST NOT ACCESS OR USE THE SERVICES.
+		</p>
+	</details>
+	<details class="terms" id="pn">
+		<summary>Privacy Notice</summary>
+		<p>
+		When you use our reservation or online ordering system to make a reservation with a restaurant (including making a reservation request) or to make an online order with a restaurant, we provide certain aspects of your information to the restaurant necessary for the restaurant to handle your request, including your name, date and time of your reservation or online order, contact details, and any other information you include when submitting the reservation or online order request. Restaurants with which we share your information may, in turn, share your information with their affiliates and service providers in order to provide you with the best customer experience, in the same way as they might share your information had you reserved or ordered with the restaurant directly.
+		</p>
+	</details>
+</div>
 
